[gd_scene load_steps=2 format=2]

[ext_resource path="res://HUD/HUDDebug.gd" type="Script" id=1]

[node name="HUDDebug" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MobTimerLabel" type="Label" parent="."]
anchor_left = 0.711
anchor_right = 1.0
anchor_bottom = 0.03
margin_left = 8.07999
margin_bottom = -0.400002
text = "Mob Timer"
align = 2
valign = 1

[node name="DifficultyTimerLabel" type="Label" parent="."]
anchor_left = 0.711
anchor_top = 0.059
anchor_right = 1.0
anchor_bottom = 0.089
margin_left = 8.07999
margin_top = 0.279995
margin_bottom = -0.120003
text = "Difficulty Timer"
align = 2
valign = 1

[node name="MobTimerResetButton" type="Button" parent="."]
anchor_left = 0.722
anchor_top = 0.03
anchor_right = 0.856
anchor_bottom = 0.059
margin_left = 0.159973
margin_top = -0.400002
margin_right = -0.320068
margin_bottom = 0.279995
text = "Reset"

[node name="MobTimerDecreaseButton" type="Button" parent="."]
anchor_left = 0.867
anchor_top = 0.03
anchor_right = 1.0
anchor_bottom = 0.059
margin_left = -8.24005
margin_top = -0.400002
margin_right = -4.0
margin_bottom = 0.279995
text = "* 0.5"

[node name="DifficultyTimerResetButton" type="Button" parent="."]
anchor_left = 0.722
anchor_top = 0.089
anchor_right = 0.861
anchor_bottom = 0.119
margin_left = 0.159973
margin_top = -0.120003
margin_right = 0.0799561
margin_bottom = -0.520004
text = "Reset"

[node name="DifficultyTimerIncreaseButton" type="Button" parent="."]
anchor_left = 0.867
anchor_top = 0.089
anchor_right = 1.006
anchor_bottom = 0.119
margin_left = -8.24005
margin_top = -0.120003
margin_right = -8.32001
margin_bottom = -0.520004
text = "+1"

[connection signal="pressed" from="MobTimerResetButton" to="." method="_on_MobTimerResetButton_pressed"]
[connection signal="pressed" from="MobTimerDecreaseButton" to="." method="_on_MobTimerDecreaseButton_pressed"]
[connection signal="pressed" from="DifficultyTimerResetButton" to="." method="_on_DifficultyTimerResetButton_pressed"]
[connection signal="pressed" from="DifficultyTimerIncreaseButton" to="." method="_on_DifficultyTimerIncreaseButton_pressed"]
